Alteração no docker-compose